testsuite/tests/properties/invalid_rebindings/get_parent.lkt
import common

class Example: FooNode {
    fun p(): Int = null[FooNode].get_parent
}
